--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ python-multipart>=0.0.21
 sse-starlette>=3.1.2
 aiofiles>=25.1.0
 
+# LLM API (for meeting minutes)
+anthropic>=0.40.0
+
 # Utilities
 pydantic>=2.12.0
 python-dotenv>=1.2.0
